<resources>
    <string name="app_name">Test_IagoMartin</string>
    <string name="hola_kotlin">Hola Kotlin</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_1">Activity 1</string>
    <string name="hola">Hola</string>
    <string name="mon">mon!</string>
    <string name="activity_1_act3">Activity 1</string>
    <string name="fuck_db">Fuck DB</string>
    <string name="logo">Logo</string>
    <string name="toast">Toast</string>
    <string name="logcat">Logcat</string>
</resources>