<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:text="@string/fuck_db"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="514dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/buttonvolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="302dp"
            android:layout_height="272dp"
            android:layout_marginTop="228dp"
            android:layout_marginBottom="120dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/caracol_nobd_img" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="422dp"
        android:layout_height="167dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="109dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.152">

        <Button
            android:id="@+id/buttonlogcat"
            android:layout_width="148dp"
            android:layout_height="51dp"
            android:text="@string/logcat" />

        <Button
            android:id="@+id/buttontoast"
            android:layout_width="148dp"
            android:layout_height="51dp"
            android:text="@string/toast" />

        <Button
            android:id="@+id/buttonvolver"
            android:layout_width="257dp"
            android:layout_height="51dp"
            android:text="@string/activity_1_act3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>